--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 find_package(OpenCV REQUIRED)
 
+include_directories(${OpenCV_INCLUDE_DIRS})
+
 add_executable(OpenCVTest OpenCVTest.cpp)
 target_link_libraries(OpenCVTest ${OpenCV_LIBS})
 
