Added empty HOG class

--- a/Source/Feature/CMakeLists.txt
+++ b/Source/Feature/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/HistogramFeature.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ColorHistogram.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/LocalBinaryPattern.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/HistogramOfOrientedGradients.cpp
     PARENT_SCOPE
 )
 
@@ -11,5 +12,6 @@ set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/HistogramFeature.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ColorHistogram.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/LocalBinaryPattern.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/HistogramOfOrientedGradients.hpp
     PARENT_SCOPE
 )
