--- a/Source/Feature/CMakeLists.txt
+++ b/Source/Feature/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCE
     ${SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/HistogramFeature.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ColorHistogram.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/LocalBinaryPattern.cpp
     PARENT_SCOPE
 )
 
@@ -9,5 +10,6 @@ set(HEADERS
     ${HEADERS}
     ${CMAKE_CURRENT_SOURCE_DIR}/HistogramFeature.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ColorHistogram.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/LocalBinaryPattern.hpp
     PARENT_SCOPE
 )
