--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 find_package(OpenCV REQUIRED)
 
+include_directories(${OpenCV_INCLUDE_DIRS})
+
 set(SOURCE)
 set(HEADERS)
 
