--- a/Source/Feature/CMakeLists.txt
+++ b/Source/Feature/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/LocalBinaryPattern.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/HistogramOfOrientedGradients.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ColorCorrelogram.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ColorQuantizationRGB.cpp
     PARENT_SCOPE
 )
 
@@ -15,5 +16,6 @@ set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/LocalBinaryPattern.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/HistogramOfOrientedGradients.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ColorCorrelogram.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ColorQuantizationRGB.cpp
     PARENT_SCOPE
 )
