Added stub similarity and distance classes

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -12,6 +12,8 @@ set(SOURCE)
 set(HEADERS)
 
 add_subdirectory(Feature)
+add_subdirectory(Distance)
+add_subdirectory(Similarity)
 
 add_library(ColorTextureShape ${SOURCE} ${HEADERS})
 target_link_libraries(ColorTextureShape ${OpenCV_LIBS})
