--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -19,3 +19,5 @@ add_subdirectory(Util)
 add_library(ColorTextureShape ${SOURCE} ${HEADERS})
 target_link_libraries(ColorTextureShape ${OpenCV_LIBS})
 
+add_executable(Test main.cpp)
+target_link_libraries(Test ColorTextureShape)
