Added stub code for convolving images
Will convolve double images around the kernel center

--- a/Source/Util/CMakeLists.txt
+++ b/Source/Util/CMakeLists.txt
@@ -1,11 +1,13 @@
 set(SOURCE
     ${SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/ColorQuantizationBGR.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Convolve.cpp
     PARENT_SCOPE
 )
 
 set(HEADERS
     ${HEADERS}
     ${CMAKE_CURRENT_SOURCE_DIR}/ColorQuantizationBGR.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Convolve.hpp
     PARENT_SCOPE
 )
