Fixed typo in cmakelists
Source file for color quantization was being included twice, for some reason this didnt show in the final project as generated by cmake though

--- a/Source/Util/CMakeLists.txt
+++ b/Source/Util/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCE
 
 set(HEADERS
     ${HEADERS}
-    ${CMAKE_CURRENT_SOURCE_DIR}/ColorQuantizationBGR.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ColorQuantizationBGR.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Convolve.hpp
     PARENT_SCOPE
 )
