Added ChiSquare distance

--- a/Source/Distance/CMakeLists.txt
+++ b/Source/Distance/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCE
     ${SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/L1Distance.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/L2Distance.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ChiSquareDistance.cpp  
     PARENT_SCOPE    
 )
 
@@ -10,5 +11,6 @@ set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/Distance.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/L1Distance.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/L2Distance.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ChiSquareDistance.hpp  
     PARENT_SCOPE
 )
