Added KL Distance

--- a/Source/Distance/CMakeLists.txt
+++ b/Source/Distance/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/L1Distance.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/L2Distance.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ChiSquareDistance.cpp  
+    ${CMAKE_CURRENT_SOURCE_DIR}/KLDistance.cpp
     PARENT_SCOPE    
 )
 
@@ -12,5 +13,6 @@ set(HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/L1Distance.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/L2Distance.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ChiSquareDistance.hpp  
+    ${CMAKE_CURRENT_SOURCE_DIR}/KLDistance.hpp
     PARENT_SCOPE
 )
