Added cosine similarity

--- a/Source/Similarity/CMakeLists.txt
+++ b/Source/Similarity/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(SOURCE
     ${SOURCE}
+    ${CMAKE_CURRENT_SOURCE_DIR}/CosineSimilarity.cpp
     PARENT_SCOPE
 )
 
 set(HEADERS
     ${HEADERS}
-	${CMAKE_CURRENT_SOURCE_DIR}/Similarity.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Similarity.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/CosineSimilarity.hpp
     PARENT_SCOPE
 )
