Added histogram intersection

--- a/Source/Similarity/CMakeLists.txt
+++ b/Source/Similarity/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCE
     ${SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/CosineSimilarity.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/HistogramIntersection.cpp
     PARENT_SCOPE
 )
 
@@ -8,5 +9,6 @@ set(HEADERS
     ${HEADERS}
     ${CMAKE_CURRENT_SOURCE_DIR}/Similarity.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/CosineSimilarity.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/HistogramIntersection.hpp
     PARENT_SCOPE
 )
